[package]
name = "lewton"
version = "0.9.4"
authors = ["est31 <MTest31@outlook.com>"]
description = "Pure Rust vorbis decoder"
license = "MIT/Apache-2.0"
repository = "https://github.com/RustAudio/lewton"
keywords = ["ogg", "vorbis", "decoder", "audio"]
categories = ["compression", "multimedia::audio", "multimedia::encoding"]
documentation = "https://docs.rs/lewton"
readme = "README.md"

[features]
default = ["ogg"]
async_ogg = ["ogg", "ogg/async", "futures", "tokio-io"]

[dependencies]
byteorder = "1.0"
smallvec = "0.6"
ogg = { version = "0.7", optional = true }
tokio-io = { version = "0.1", optional = true }
futures = { version = "0.1", optional = true }

[dev-dependencies]
ogg = "0.7"
alto = "3"

[package.metadata.docs.rs]
features = ["async_ogg"]

[lib]
name = "lewton"
crate-type = ["lib", "cdylib"]
