[package]
name = "cmp"
publish = false
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2015"

[dependencies]
lewton = { path = "../../" }
vorbis = "0.1"
# Workaround for test failure.
# Apply branch of this PR: https://github.com/tomaka/vorbis-rs/pull/20
#vorbis = { git = 'https://github.com/roderickvd/vorbis-rs', branch = 'fix-ub-panic' }
test-assets = "0.2"
